--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Oncoscape/inst/scripts/oncoprint/oncoprintjs"]
 	path = Oncoscape/inst/scripts/oncoprint/oncoprintjs
-	url = https://github.com/Oncoscape/oncoprintjs.git
+	url = http://github.com/Oncoscape/oncoprintjs.git
